--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
                   Projects
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="#">Project 1</a></li>
-                  <li><a class="dropdown-item" href="#">Project 2</a></li>
+                  <li><a class="dropdown-item" href="https://getbootstrap.com/docs/5.1/components/navbar/">Project 1</a></li>
+                  <li><a class="dropdown-item" href="https://maityamit.github.io/maityamit-portfolio/">Project 2</a></li>
                   <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">External Project</a></li>
+                  <li><a class="dropdown-item" href="https://maityamit.github.io/maityamit-portfolio/">External Project</a></li>
                 </ul>
               </li>
               <li class="nav-item">
