--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
               </li>
             </ul>
             <form class="d-flex">
-              <button class="btn btn-outline-success" type="warning">Contact</button>
+                <button type="button" class="btn btn-warning">CONTACT</button>
             </form>
           </div>
         </div>
