--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">About</a>
+                <button type="button" class="btn btn-primary">About</button>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Social Handles</a>
