--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <button type="button" class="btn btn-primary">About</button>
+                <button type="button" class="btn btn-primary" href = '#'>About</button>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Social Handles</a>
+                <button type="button" class="btn btn-primary" href = '#'>Experience</button>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="https://getbootstrap.com/docs/5.1/components/navbar/" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Projects
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
