--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Robin Bijo</title>
 </head>
-<body>
+<body style = "font-family:Verdana, Geneva, Tahoma, sans-serif;">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">Robin Bijo</a>
@@ -16,7 +16,7 @@
                 <button type="button" class="btn btn-primary" href = '#'>About</button>
               </li>
               <li class="nav-item">
-                <button type="button" class="btn btn-primary" href = '#'>Experience</button>
+                <button type="button" class="btn btn-primary" href = '#' >Experience</button>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
