--- a/index.html
+++ b/index.html
@@ -1,43 +1,105 @@
-<!DOCTYPE html>
+<html>
 <head>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>Robin Bijo</title>
+    <title>About Page</title>
+    <script src="https://unpkg.com/react/umd/react.development.js"></script>
+    <script src="https://unpkg.com/react-dom/umd/react-dom.development.js"></script>
+    <script src="https://unpkg.com/@babel/standalone/babel.js"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"></link>
+    <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Rajdhani', sans-serif;
+        }
+    </style>
 </head>
-<body style = "font-family:Verdana, Geneva, Tahoma, sans-serif;">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Robin Bijo</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <button type="button" class="btn btn-primary" href = '#'>About</button>
-              </li>
-              <li class="nav-item">
-                <button type="button" class="btn btn-primary" href = '#' >Experience</button>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Projects
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="https://getbootstrap.com/docs/5.1/components/navbar/">Project 1</a></li>
-                  <li><a class="dropdown-item" href="https://maityamit.github.io/maityamit-portfolio/">Project 2</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="https://maityamit.github.io/maityamit-portfolio/">External Project</a></li>
-                </ul>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link disabled">Contact</a>
-              </li>
-            </ul>
-            <form class="d-flex">
-                <button type="button" class="btn btn-warning">CONTACT</button>
-            </form>
-          </div>
-        </div>
-      </nav>
-    
+<body class="bg-gray-900 text-white">
+    <div id="root"></div>
+    <script type="text/babel">
+        const { useState } = React;
+
+        const App = () => {
+            const [activeTab, setActiveTab] = useState('ABOUT');
+            const [isMenuOpen, setIsMenuOpen] = useState(false);
+            const [isDialogOpen, setIsDialogOpen] = useState(false);
+
+            const handleTabClick = (tab) => {
+                setActiveTab(tab);
+                window.history.pushState({}, '', `/${tab.toLowerCase()}`);
+                setIsMenuOpen(false);
+            };
+
+            const handleContactClick = () => {
+                setIsDialogOpen(true);
+            };
+
+            const handleCloseDialog = () => {
+                setIsDialogOpen(false);
+            };
+
+            return (
+                <div className="p-4">
+                    <nav className="flex items-center justify-between mb-4">
+                        <a href="#" className={`px-2 ${activeTab === 'ROBIN BIJO' ? 'text-yellow-400 border-b-2 border-yellow-400' : 'text-green-500'}`} onClick={() => handleTabClick('ROBIN BIJO')}>ROBIN BIJO</a>
+                        <div className="hidden md:flex space-x-4">
+                            <a href="#" className={`px-2 ${activeTab === 'ABOUT' ? 'text-yellow-400 border-b-2 border-yellow-400' : 'text-gray-400'}`} onClick={() => handleTabClick('ABOUT')}>ABOUT</a>
+                            <a href="#" className={`px-2 ${activeTab === 'EXPERIENCE' ? 'text-yellow-400 border-b-2 border-yellow-400' : 'text-gray-400'}`} onClick={() => handleTabClick('EXPERIENCE')}>EXPERIENCE</a>
+                            <a href="#" className={`px-2 ${activeTab === 'PROJECTS' ? 'text-yellow-400 border-b-2 border-yellow-400' : 'text-gray-400'}`} onClick={() => handleTabClick('PROJECTS')}>PROJECTS</a>
+                        </div>
+                        <a href="#" className="hidden md:block text-black bg-yellow-400 px-4 py-1 border border-yellow-400" onClick={handleContactClick}>CONTACT</a>
+                        <button className="ml-auto text-white md:hidden" onClick={() => setIsMenuOpen(!isMenuOpen)}>
+                            <i className={`fas ${isMenuOpen ? 'fa-times' : 'fa-bars'}`}></i>
+                        </button>
+                    </nav>
+                    <div className={`flex-col md:hidden ${isMenuOpen ? 'flex' : 'hidden'} md:ml-auto bg-gray-800 p-4 md:p-0`}>
+                        <div className="flex justify-between items-center mb-4 md:hidden">
+                            <span className="text-xl uppercase">Menu</span>
+                        </div>
+                        <a href="#" className={`px-2 py-2 text-lg ${activeTab === 'ABOUT' ? 'text-yellow-400 border-b-2 border-yellow-400' : 'text-gray-400'}`} onClick={() => handleTabClick('ABOUT')}>ABOUT</a>
+                        <a href="#" className={`px-2 py-2 text-lg ${activeTab === 'EXPERIENCE' ? 'text-yellow-400 border-b-2 border-yellow-400' : 'text-gray-400'}`} onClick={() => handleTabClick('EXPERIENCE')}>EXPERIENCE</a>
+                        <a href="#" className={`px-2 py-2 text-lg ${activeTab === 'PROJECTS' ? 'text-yellow-400 border-b-2 border-yellow-400' : 'text-gray-400'}`} onClick={() => handleTabClick('PROJECTS')}>PROJECTS</a>
+                        <a href="#" className="text-black bg-yellow-400 px-4 py-2 text-lg border border-yellow-400" onClick={handleContactClick}>CONTACT</a>
+                    </div>
+                    <div className="bg-gray-800 p-4 mt-4 md:mt-0 md:flex md:items-center md:justify-start">
+                        <img src="https://placehold.co/100x100" alt="GitHub logo" className="w-24 h-24 mx-auto mb-4 md:mb-0 md:mr-4"/>
+                        <div>
+                            <p className="text-green-500 text-xl">Hello World!</p>
+                            <p className="text-green-400">Myself Robin, an avid programmer amid computers</p>
+                        </div>
+                    </div>
+
+                    {isDialogOpen && (
+                        <div className="fixed inset-0 flex items-center justify-center bg-black bg-opacity-50">
+                            <div className="bg-gray-800 p-6 rounded-lg w-11/12 md:w-1/2 lg:w-1/3">
+                                <div className="flex justify-between items-center mb-4">
+                                    <h2 className="text-xl">Contact Me</h2>
+                                    <button className="text-white" onClick={handleCloseDialog}>
+                                        <i className="fas fa-times"></i>
+                                    </button>
+                                </div>
+                                <form>
+                                    <div className="mb-4">
+                                        <label className="block text-gray-400 mb-2" htmlFor="email">Email</label>
+                                        <input className="w-full p-2 bg-gray-700 text-white rounded" type="email" id="email" name="email" required />
+                                    </div>
+                                    <div className="mb-4">
+                                        <label className="block text-gray-400 mb-2" htmlFor="subject">Subject</label>
+                                        <input className="w-full p-2 bg-gray-700 text-white rounded" type="text" id="subject" name="subject" required />
+                                    </div>
+                                    <div className="mb-4">
+                                        <label className="block text-gray-400 mb-2" htmlFor="message">Message</label>
+                                        <textarea className="w-full p-2 bg-gray-700 text-white rounded" id="message" name="message" rows="4" required></textarea>
+                                    </div>
+                                    <button className="w-full bg-yellow-400 text-black py-2 rounded" type="submit">CONTACT ME</button>
+                                </form>
+                            </div>
+                        </div>
+                    )}
+                </div>
+            );
+        };
+
+        ReactDOM.render(<App />, document.getElementById('root'));
+    </script>
 </body>
+</html>
