Fixed Robin Bijo issue,Title Name

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>About Page</title>
+    <title>Robin Bijo</title>
     <script src="https://unpkg.com/react/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.js"></script>
@@ -40,7 +40,7 @@
             return (
                 <div className="p-4">
                     <nav className="flex items-center justify-between mb-4">
-                        <a href="#" className={`px-2 ${activeTab === 'ROBIN BIJO' ? 'text-yellow-400 border-b-2 border-yellow-400' : 'text-green-500'}`} onClick={() => handleTabClick('ROBIN BIJO')}>ROBIN BIJO</a>
+                        <a href="#" className={`px-2 ${activeTab === 'ROBIN BIJO' ? 'text-yellow-400 border-b-2 border-yellow-400' : 'text-green-500'}`} onClick={() => handleTabClick('ABOUT')}>ROBIN BIJO</a>
                         <div className="hidden md:flex space-x-4">
                             <a href="#" className={`px-2 ${activeTab === 'ABOUT' ? 'text-yellow-400 border-b-2 border-yellow-400' : 'text-gray-400'}`} onClick={() => handleTabClick('ABOUT')}>ABOUT</a>
                             <a href="#" className={`px-2 ${activeTab === 'EXPERIENCE' ? 'text-yellow-400 border-b-2 border-yellow-400' : 'text-gray-400'}`} onClick={() => handleTabClick('EXPERIENCE')}>EXPERIENCE</a>
