Fixing Alignment of About page name and photo

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <a href="#" className={`px-2 py-2 text-lg ${activeTab === 'PROJECTS' ? 'text-yellow-400 border-b-2 border-yellow-400' : 'text-gray-400'}`} onClick={() => handleTabClick('PROJECTS')}>PROJECTS</a>
                         <a href="#" className="text-black bg-yellow-400 px-4 py-2 text-lg border border-yellow-400" onClick={handleContactClick}>CONTACT</a>
                     </div>
-                    <div className="bg-gray-800 p-4 mt-4 md:mt-0 md:flex md:items-center md:justify-start">
+                    <div className="bg-gray-800 p-4 mt-4 md:mt-0 md:flex md:items-center md:left-start">
                         <img src="https://placehold.co/100x100" alt="GitHub logo" className="w-24 h-24 mx-auto mb-4 md:mb-0 md:mr-4"/>
                         <div>
                             <p className="text-green-500 text-xl">Hello World!</p>
